--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Dancing+Script:wght@400..700&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    --border-color: rgb(208, 208, 208)
+  }
+  
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
+    list-style-type: none;
     text-transform: capitalize;
+    
 }
 
 html{
     font-size: 65%;
+}
+
+body{
+    background-color: rgb(240, 255, 213);
 }
 .main-div{
     display: flex;
@@ -21,32 +33,123 @@ html{
     gap: 1.5rem;
     
     .title{
-        font-size: 3rem;
+        font-size: 2.5rem;
         width: 30rem;
-        font-weight: 300;
+        font-weight: 500;
+        text-align: center;
+        margin-bottom: 1.5rem;
+        color: rgb(61, 108, 75);
 
     }
     .container{
         font-size: 1.5rem;
         width: 30rem;
         
-        h4, h1{
+        h4{
             font-weight: 400;
             text-transform: uppercase;
+        }
+
+        
+        h1{
+            font-weight: 300;
+        }
+
+        h3{
+            font-weight: 400;
+            margin-top: 3rem;
+            border-bottom: .1rem solid var(--border-color);
+        }
+
+        .inc-exp-container{
+            width: 30rem;
+            display: flex;
+            justify-content: center;
+            padding: 1.2rem;
+            background-color: white;
+            box-shadow: var(--box-shadow);
+    
+            div{
+                flex: 1;
+                text-align: center;
+            }
+            
+            .income-box{
+                border-right: .1rem solid ;
+                p{
+                    color: green;
+                }
+            }
+    
+            .expense-box{
+                p{
+                    color: red;
+                }
+            }
+    
+    
+        }
+
+        .transaction{
+
+            .list{
+                padding: 0;
+                margin-top: 1.5rem;
+
+                li{
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 1rem;
+                    box-shadow: var(--box-shadow);
+                    background-color: white;
+
+                    .delete-btn{
+                        display: none;
+                    }
+                }
+
+                .minus{
+                    border-right: .4rem solid red;
+                }
+            }
+        }
+
+        .add-transaction{
+            margin-top: 3rem;
+
+            form{
+                margin-top: 1.5rem;
+
+                .form-control{
+                    display: flex;
+                    flex-direction: column;
+
+                    input{
+                        width: 100%;
+                        margin: 1.1rem 0;
+                        padding: 0.7rem;
+                        border: .1rem solid var(--border-color);
+
+                        &::placeholder{
+                            color: black;
+                        }
+                    }
+                }
+
+                .btn{
+                    width: 100%;
+                    padding: 1rem;
+                    color: white;
+                    background-color: rgb(150, 104, 150);
+                    border: none;
+                    font-weight: 300;
+                }
+            }
         }
        
     }
 
-    .inc-exp-container{
-        width: 30rem;
-        display: flex;
-        justify-content: center;
-        box-shadow: rgba(0, 0, 0, 0.1);
 
-        .income-box, .expense-box{
-            flex: 1 1 15rem;
-            text-align: center;
-        }
-    }
 
 }
