--- a/src/index.scss
+++ b/src/index.scss
@@ -1,155 +1,170 @@
-@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Dancing+Script:wght@400..700&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Dancing+Script:wght@400..700&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
 
 :root {
-    --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    --border-color: rgb(208, 208, 208)
-  }
-  
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style-type: none;
-    text-transform: capitalize;
-    
+  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  --border-color: rgb(208, 208, 208);
 }
 
-html{
-    font-size: 65%;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style-type: none;
+  text-transform: capitalize;
 }
 
-body{
-    background-color: rgb(240, 255, 213);
+html {
+  font-size: 65%;
 }
-.main-div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Poppins', sans-serif;
-    height: 100vh;
-    gap: 1.5rem;
-    
-    .title{
-        font-size: 2.5rem;
-        width: 30rem;
-        font-weight: 500;
-        text-align: center;
-        margin-bottom: 1.5rem;
-        color: rgb(61, 108, 75);
 
-    }
-    .container{
-        font-size: 1.5rem;
-        width: 30rem;
-        
-        h4{
-            font-weight: 400;
-            text-transform: uppercase;
-        }
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Poppins', sans-serif;
+  height: 100vh;
+  gap: 1.5rem;
+  background-color: rgb(240, 255, 213);
+}
 
-        
-        h1{
-            font-weight: 300;
-        }
+.title {
+  font-size: 2rem;
+  width: 30rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 1.5rem;
+  color: rgb(61, 108, 75);
+}
 
-        h3{
-            font-weight: 400;
-            margin-top: 3rem;
-            border-bottom: .1rem solid var(--border-color);
-        }
+.container {
+  font-size: 1.2rem;
+  width: 30rem;
+}
 
-        .inc-exp-container{
-            width: 30rem;
-            display: flex;
-            justify-content: center;
-            padding: 1.2rem;
-            background-color: white;
-            box-shadow: var(--box-shadow);
-    
-            div{
-                flex: 1;
-                text-align: center;
-            }
-            
-            .income-box{
-                border-right: .1rem solid ;
-                p{
-                    color: green;
-                }
-            }
-    
-            .expense-box{
-                p{
-                    color: red;
-                }
-            }
-    
-    
-        }
+h4 {
+  font-weight: 600;
+  text-transform: uppercase;
+}
 
-        .transaction{
+h1 {
+  font-weight: 400;
+}
 
-            .list{
-                padding: 0;
-                margin-top: 1.5rem;
+h3 {
+  font-weight: 600;
+  margin-top: 2.3rem;
+  border-bottom: .1rem solid var(--border-color);
+}
 
-                li{
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    padding: 1rem;
-                    box-shadow: var(--box-shadow);
-                    background-color: white;
+.inc-exp-container {
+  width: 30rem;
+  display: flex;
+  justify-content: center;
+  padding: 1.2rem;
+  background-color: white;
+  box-shadow: var(--box-shadow);
+}
 
-                    .delete-btn{
-                        display: none;
-                    }
-                }
+.inc-exp-container div {
+  flex: 1;
+  text-align: center;
+}
 
-                .minus{
-                    border-right: .4rem solid red;
-                }
-            }
-        }
+.income-box {
+  border-right: .1rem solid;
+}
 
-        .add-transaction{
-            margin-top: 3rem;
+.income-box p {
+  color: green;
+}
 
-            form{
-                margin-top: 1.5rem;
+.expense-box p {
+  color: red;
+}
 
-                .form-control{
-                    display: flex;
-                    flex-direction: column;
+.transaction .list {
+  padding: 0;
+  margin-top: 1.5rem;
+}
 
-                    input{
-                        width: 100%;
-                        margin: 1.1rem 0;
-                        padding: 0.7rem;
-                        border: .1rem solid var(--border-color);
+.transaction .list li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  box-shadow: var(--box-shadow);
+  background-color: white;
+  margin-bottom: 1.1rem;
+  position: relative;
+}
 
-                        &::placeholder{
-                            color: black;
-                        }
-                    }
-                }
+.transaction .list li .delete-btn {
+  cursor: pointer;
+  background-color: #e74c3c;
+  border: 0;
+  color: #fff;
+  font-size: 20px;
+  line-height: 20px;
+  padding: 2px 5px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(-100%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
 
-                .btn{
-                    width: 100%;
-                    padding: 1rem;
-                    color: white;
-                    background-color: rgb(150, 104, 150);
-                    border: none;
-                    font-weight: 300;
-                }
-            }
-        }
-       
-    }
+.transaction .list li:hover .delete-btn {
+  opacity: 1;
+}
 
+.transaction .list .minus {
+  border-right: .4rem solid red;
+}
 
+.transaction .list .plus {
+  border-right: .4rem solid green;
+}
 
+.add-transaction {
+  margin-top: 3rem;
+}
+
+.add-transaction form {
+  margin-top: 1.5rem;
+}
+
+.add-transaction form .form-control {
+  display: flex;
+  flex-direction: column;
+}
+
+.add-transaction form .form-control label {
+  font-weight: bold;
+}
+
+.add-transaction form .form-control input {
+  width: 100%;
+  margin: 0.6rem 0;
+  padding: 0.7rem;
+  border: .1rem solid var(--border-color);
+}
+
+.add-transaction form .form-control input::placeholder {
+  color: black;
+}
+
+.add-transaction form .btn {
+  cursor: pointer;
+  background-color: #5d4278;
+  box-shadow: var(--box-shadow);
+  color: #fff;
+  border: 0;
+  display: block;
+  font-size: 16px;
+  margin: 1rem 0 1rem;
+  padding: 10px;
+  width: 100%;
 }
